day3/07_ingress/solution/python-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      name: python-pod
      labels:
        app: python
    spec:
      containers:
      - name: python-container
        image: marcinmakowski/python-api:redis
        ports:
          - containerPort: 5002
