day3/07_ingress/solution/python.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: mydomain.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/python(.+)"
        backend:
          service:
            name: python-service
            port:
              number: 5002
